# tonic-repros

./: .gitignore  README.md  flake.nix
tonic-2388/: Cargo.toml
tonic-2388/proto/: helloworld.proto
tonic-2388/src/: server.rs
tonic-2469/: Cargo.toml
tonic-2469/src/: client.rs  middleware.rs  server.rs
