[package]
name = "tonic-2388"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
